# bitsgofer.github.io

./: .gitignore  Cargo.toml  Makefile
.github/workflows/: ci.yml
content/about/: README.md
content/articles/about/: README.md
content/articles/blog/hello/: README.md
content/articles/games/: README.md
content/articles/games/typecaster/: README.md
content/articles/managing-k8s-addons/: README.md
content/articles/second-update/: README.md
content/articles/third-update/: README.md
content/drafts/from-golang-to-rust/: README.md
src/: create.rs  install.rs  lib.rs  main.rs  render.rs  serve.rs  watch.rs
themes/indie_studio/css/: 1_config.css  2_layout.css  2_syntax_highlight.css  2_theme.css
themes/indie_studio/pandoc/lua-filters/: date-format.lua
themes/indie_studio/templates/: page.html
themes/personal_balance/css/: 0_reset.css  1_config.css  2_layout.css  2_syntax_highlight.css  2_theme.css
themes/personal_balance/js/: theme.js
themes/personal_balance/pandoc/highlight-theme/: solarized.theme
themes/personal_balance/templates/: page.html
tools/webserver/: main.go
