[package]
name = "komet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
reqwest = { version = "0.11.20", features = ["blocking"] }
os_info = { version = "3.7.0" }
tempfile = { version = "3.8.0" }
home = { version = "0.5.5" }
